trunk/Archive2/88/3df3d2b66f9d61/output
main.cpp: In function 'int main()':
main.cpp:26:19: error: '& i' is not a valid template argument of type 'int*' because 'i' does not have external linkage
     temp_on_int<&i> five;
                   ^
main.cpp:26:25: error: invalid type in declaration before ';' token
     temp_on_int<&i> five;
                         ^
main.cpp:28:10: error: request for member 'print' in 'five', which is of non-class type 'int'
     five.print();
          ^
main.cpp:30:22: error: '& j' is not a valid template argument of type 'char*' because 'j' does not have external linkage
     temp_on_string<&j> h;
                      ^
main.cpp:30:25: error: invalid type in declaration before ';' token
     temp_on_string<&j> h;
                         ^
main.cpp:31:7: error: request for member 'print' in 'h', which is of non-class type 'int'
     h.print();
       ^
